objects/PWCA_publication__c.object
<CustomObject>
    <description>PWCA (product wafer compliance analysis) report Publication to Foundryview</description>
    <fields>
        <fullName>CountOfAssCustomer__c</fullName>
        <label>CountOfAssCustomer</label>
        <summaryForeignKey>PWCAAssociated_Customers__c.PWCA_Publication__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CountOfAttachment__c</fullName>
        <label>CountOfAttachment</label>
        <summaryForeignKey>PWCA_Attachments__c.PWCA_Publication__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Customer_Of_Wafer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Of Wafer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>PWCA_Publication (Customer Of Wafer)</relationshipLabel>
        <relationshipName>PWCA_Publication</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Device_ID__c</fullName>
        <label>Device ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Status__c</fullName>
        <label>Document Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Preliminary</fullName>
                    <default>true</default>
                    <label>Preliminary</label>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Effective</fullName>
                </value>
                <value>
                    <fullName>Obsolete</fullName>
                </value>
                <value>
                    <fullName>Pending Resubmission</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Document_Title__c</fullName>
        <formula>Text(Fab__c) + IF((NOT(ISPICKVAL(Fab__c,&apos;&apos;))) &amp;&amp; (NOT(ISPICKVAL(Technology_Node__c,&apos;&apos;))),&apos;_&apos;,&apos;&apos;) + Text(Technology_Node__c) + IF((NOT(ISPICKVAL(Fab__c,&apos;&apos;))) &amp;&amp; (NOT(ISPICKVAL(Technology_Node__c,&apos;&apos;))),&apos;_&apos;,&apos;&apos;) + &quot;PWCA&quot; + IF(NOT(ISNULL(Report_Date__c)),&apos;_&apos;,&apos;&apos;) + Text(Report_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dopants_Used_for_Implantation__c</fullName>
        <label>Dopants Used for Implantation</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>As</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>BF</fullName>
                </value>
                <value>
                    <fullName>Carbon</fullName>
                </value>
                <value>
                    <fullName>Ge</fullName>
                </value>
                <value>
                    <fullName>In</fullName>
                </value>
                <value>
                    <fullName>P</fullName>
                </value>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>Xe</fullName>
                </value>
                <value>
                    <fullName>Not Specific</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <description>It signifies the date when the PWCA Publication documents are published to customers.</description>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fab__c</fullName>
        <label>Fab</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>3E</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>10/8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Information_from_YE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>YE Assignee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PWCA_Publication</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lot_ID__c</fullName>
        <label>Lot ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Metal_Layers__c</fullName>
        <label>No of Metal Layers</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OpenTextIdPublish__c</fullName>
        <label>OpenTextIdPublish</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpenTextId__c</fullName>
        <label>OpenTextId</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PWCA_Publication__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PWCA Publication</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ready_To_Publish__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ready To Publish</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Regional_Site_Approval__c</fullName>
        <label>Site</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Fab__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>AP</fullName>
                </value>
                <value>
                    <fullName>EU</fullName>
                </value>
                <value>
                    <fullName>US</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Report_Date__c</fullName>
        <label>Report Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reviewer_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if Approval is required</inlineHelpText>
        <label>Reviewer Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <formula>&apos;PWCA&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Targets_used_in_metal_deposition__c</fullName>
        <label>Targets used in metal deposition</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Al</fullName>
                </value>
                <value>
                    <fullName>Al/Cu</fullName>
                </value>
                <value>
                    <fullName>Co</fullName>
                </value>
                <value>
                    <fullName>Cu</fullName>
                </value>
                <value>
                    <fullName>Ni+5%Pt</fullName>
                </value>
                <value>
                    <fullName>Ta</fullName>
                </value>
                <value>
                    <fullName>Ti</fullName>
                </value>
                <value>
                    <fullName>TiN</fullName>
                </value>
                <value>
                    <fullName>W</fullName>
                </value>
                <value>
                    <fullName>Not Specified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technology_Node__c</fullName>
        <label>Technology Node</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Fab__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>7nm</fullName>
                </value>
                <value>
                    <fullName>10nm</fullName>
                </value>
                <value>
                    <fullName>14nm</fullName>
                </value>
                <value>
                    <fullName>20nm</fullName>
                </value>
                <value>
                    <fullName>22nm</fullName>
                </value>
                <value>
                    <fullName>28nm</fullName>
                </value>
                <value>
                    <fullName>32nm</fullName>
                </value>
                <value>
                    <fullName>40nm</fullName>
                </value>
                <value>
                    <fullName>45nm</fullName>
                </value>
                <value>
                    <fullName>55nm</fullName>
                </value>
                <value>
                    <fullName>60nm</fullName>
                </value>
                <value>
                    <fullName>65nm</fullName>
                </value>
                <value>
                    <fullName>86nm</fullName>
                </value>
                <value>
                    <fullName>80nm</fullName>
                </value>
                <value>
                    <fullName>90nm</fullName>
                </value>
                <value>
                    <fullName>0.11um</fullName>
                </value>
                <value>
                    <fullName>0.13um</fullName>
                </value>
                <value>
                    <fullName>0.14um</fullName>
                </value>
                <value>
                    <fullName>0.152um</fullName>
                </value>
                <value>
                    <fullName>0.153um</fullName>
                </value>
                <value>
                    <fullName>0.15um</fullName>
                </value>
                <value>
                    <fullName>0.16um</fullName>
                </value>
                <value>
                    <fullName>0.18um</fullName>
                </value>
                <value>
                    <fullName>0.20um</fullName>
                </value>
                <value>
                    <fullName>0.22um</fullName>
                </value>
                <value>
                    <fullName>0.25um</fullName>
                </value>
                <value>
                    <fullName>0.40um</fullName>
                </value>
                <value>
                    <fullName>0.45um</fullName>
                </value>
                <value>
                    <fullName>0.50um</fullName>
                </value>
                <value>
                    <fullName>0.60um</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TypeOfDocument__c</fullName>
        <label>Type Of Document</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Halogen</fullName>
                </value>
                <value>
                    <fullName>PFOA</fullName>
                </value>
                <value>
                    <fullName>PFOS</fullName>
                </value>
                <value>
                    <fullName>RoHS</fullName>
                </value>
                <value>
                    <fullName>Phthalates</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Document__c</fullName>
        <label>Type of Document</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RoHS</fullName>
                </value>
                <value>
                    <fullName>Halogen</fullName>
                </value>
                <value>
                    <fullName>PFOS</fullName>
                </value>
                <value>
                    <fullName>PFOA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Metal_Layers__c</fullName>
        <label>Type of Metal Layers</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>Cu</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Valid_Till__c</fullName>
        <label>Valid Till</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Wafer_ID__c</fullName>
        <label>Wafer ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>PWCA Publication</label>
    <listViews>
        <fullName>All_PWCA_Reports</fullName>
        <columns>NAME</columns>
        <columns>Document_Title__c</columns>
        <columns>Technology_Node__c</columns>
        <columns>Fab__c</columns>
        <columns>Document_Status__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Valid_Till__c</columns>
        <filterScope>Everything</filterScope>
        <label>All PWCA Reports</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PWCA-{YYYY}{MM}{DD}{0000}</displayFormat>
        <label>PWCA Report</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PWCA Publication</pluralLabel>
    <recordTypes>
        <fullName>PWCAWithApproval</fullName>
        <active>true</active>
        <label>PWCAWithApproval</label>
    </recordTypes>
    <recordTypes>
        <fullName>PWCAWithSubmitApproval</fullName>
        <active>true</active>
        <label>PWCAWithSubmitApproval</label>
    </recordTypes>
    <recordTypes>
        <fullName>PWCA_Lock_Record</fullName>
        <active>true</active>
        <label>PWCA Lock Record</label>
    </recordTypes>
    <recordTypes>
        <fullName>PWCA_Report</fullName>
        <active>true</active>
        <label>PWCA Report</label>
    </recordTypes>
    <recordTypes>
        <fullName>PWCA_Report_with_Publish</fullName>
        <active>true</active>
        <label>PWCA Report with Publish</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Dopants_Used_for_Implantation_Check</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Dopants_Used_for_Implantation__c)</errorConditionFormula>
        <errorDisplayField>Dopants_Used_for_Implantation__c</errorDisplayField>
        <errorMessage>Please select the Dopants Used for Implantation</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mandatory_Attribute</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Fab__c,&quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Fab__c</errorDisplayField>
        <errorMessage>Please enter the Fab.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Number_of_Metal_check</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(No_of_Metal_Layers__c,&quot;&quot;)</errorConditionFormula>
        <errorDisplayField>No_of_Metal_Layers__c</errorDisplayField>
        <errorMessage>Please input the number of metal layers.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Regional_Site_Approval</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Regional_Site_Approval__c, &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Regional_Site_Approval__c</errorDisplayField>
        <errorMessage>Please Enter the Site.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Technology_Node_Check</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Technology_Node__c, &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Technology_Node__c</errorDisplayField>
        <errorMessage>Please Enter the Technology Node.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Type_of_Document</fullName>
        <active>false</active>
        <errorConditionFormula>ISPICKVAL(Type_of_Document__c,&quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Type_of_Document__c</errorDisplayField>
        <errorMessage>Please Enter the Type of document</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Type_of_Metal_Layer</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Type_of_Metal_Layers__c)</errorConditionFormula>
        <errorDisplayField>Type_of_Metal_Layers__c</errorDisplayField>
        <errorMessage>Please select the Type of Metal Layers</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valid_Till_date</fullName>
        <active>true</active>
        <description>Valid Till date Cannot be Past date</description>
        <errorConditionFormula>Valid_Till__c&lt;=TODAY ()</errorConditionFormula>
        <errorDisplayField>Valid_Till__c</errorDisplayField>
        <errorMessage>You are not allow to input Today date or a Past Date.</errorMessage>
    </validationRules>
</CustomObject>